# matrix-nio-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.integration.yml  docker-compose.yml  pyproject.toml  todo.md
.claude/: settings.local.json
.github/workflows/: container.yml  tests.yml
scripts/: test-matrix-integration.sh
src/nio_mcp/: config.py  embeddings.py  matrix_client.py  models.py  server.py  store.py  vector_store.py  webhook.py
tests/integration/: conftest.py  test_matrix_client_real_server.py  test_qdrant_integration.py
tests/integration/matrix/: Dockerfile.synapse  start-synapse.sh
tests/unit/: conftest.py  test_auth.py  test_config.py  test_embeddings.py  test_matrix_client.py  test_mcp_transport.py  test_server.py  test_vector_store.py  test_webhook.py
