[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nio-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matrix-nio[e2e]>=0.21",
    "mcp>=1.0",
    "qdrant-client>=1.9",
    "openai>=1.30",
    "tiktoken>=0.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "anyio>=4.4",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "respx>=0.21",
]

[project.scripts]
nio-mcp = "nio_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.package-dir]
"" = "src"
